# ArogyaFlow-AI-

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  RUN_INSTRUCTIONS.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
config/: demo.json
src/arogyaflow/: __init__.py  analysis.py  api.py  arrival_forecasting.py  baseline_pipeline.py  baselines.py  bed_occupancy.py  config.py  dashboard.py  dashboard_client.py  database.py  demo.py  exceptions.py  explainability.py  identifiers.py  logging.py  monitoring.py  no_show.py  observability.py  retraining.py  security.py  serving.py  simulation.py  tracking.py  train_no_show.py  train_wait_time.py  wait_time.py
src/arogyaflow/data/: __init__.py  cli.py  contracts.py  generation.py  ingestion.py  pipeline.py  validation.py
src/arogyaflow/migrations/: 0001_prediction_records.sql  __init__.py
tests/: test_arrival_forecasting.py  test_baselines.py  test_bed_occupancy.py  test_config.py  test_data_generation.py  test_demo.py  test_e2e.py  test_external_ingestion.py  test_health.py  test_monitoring.py  test_no_show_model.py  test_retraining.py  test_security_observability.py  test_serving.py  test_simulation.py  test_wait_time_model.py
