[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "arogyaflow"
version = "0.1.0"
description = "ArogyaFlow AI"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.2",
  "joblib==1.5.3",
  "numpy==2.3.4",
  "pandas==2.3.3",
  "pandera==0.32.1",
  "pydantic-settings==2.14.2",
  "pyarrow==24.0.0",
  "scikit-learn==1.9.0",
  "streamlit==1.59.2",
  "uvicorn==0.51.0",
]

[project.scripts]
baseline-analysis = "arogyaflow.baseline_pipeline:main"
generate-data = "arogyaflow.data.cli:main"
train-wait-time = "arogyaflow.train_wait_time:main"

[dependency-groups]
dev = [
  "httpx2==2.7.0",
  "mypy==2.3.0",
  "pandas-stubs==2.3.3.260113",
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
]
ml = [
  "mlflow==3.14.0",
  "shap==0.51.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arogyaflow"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
